tests/init_state/projection/projection_init_violations.err.expected
error: at 55:5: [VF-DowncastVariantNotRefined] In function 'downcast_read_of_uninit_enum', block 'entry': cannot downcast 'o as Some' here: 'o' is not refined to variant 'Some'
    |
 54 |   entry:
 55 |     a = copy o as Some;
    |     ^^^^^^^^^^^^^^^^^^
 56 |     return
    |
error: at 67:5: [VF-DowncastVariantNotRefined] In function 'downcast_write_through_uninit_enum', block 'entry': cannot downcast 'o as Some' here: 'o' is not refined to variant 'Some'
    |
 66 |   entry:
 67 |     o as Some = 7;
    |     ^^^^^^^^^^^^^
 68 |     return
    |
error: at 81:5: [VF-DowncastVariantNotRefined] In function 'downcast_write_through_moved_enum', block 'entry': cannot downcast 'o as Some' here: 'o' is not refined to variant 'Some'
    |
 80 |     sink = move o;
 81 |     o as Some = 7;
    |     ^^^^^^^^^^^^^
 82 |     return
    |
